(BLEEDING) Second Phase of RTL Fixes

--- a/interface/themes/patientportal-register.scss
+++ b/interface/themes/patientportal-register.scss
@@ -40,12 +40,18 @@ body {
   }
 }
 
-.stepwiz-step p {
-  margin-top: 10px;
-}
-
 .stepwiz-row {
-  display: table-row;
+    display: table-row;
+	&:before {
+	    top: 14px;
+	    bottom: 0;
+	    position: absolute;
+	    content: " ";
+	    width: 100%;
+	    height: 1px;
+	    background-color: #ccc;
+	    z-order: 0;
+	}
 }
 
 .stepwiz {
@@ -55,26 +61,17 @@ body {
   width: 100%;
 }
 
-.stepwiz-step button[disabled] {
-  filter: alpha(opacity=100) !important;
-  opacity: 1 !important;
-}
-
-.stepwiz-row::before {
-  background-color: #ccc;
-  bottom: 0;
-  content: " ";
-  height: 1px;
-  position: absolute;
-  top: 14px;
-  width: 100%;
-  z-index: 0;
-}
-
 .stepwiz-step {
-  display: table-cell;
-  position: relative;
-  text-align: center;
+    display: table-cell;
+    text-align: center;
+    position: relative;
+	p {
+	    margin-top: 10px;
+	}
+	button[disabled] {
+	    opacity: 1 !important;
+	    filter: alpha(opacity=100) !important;
+	}
 }
 
 .btn-circle {
